# bsu-forlabs

./: CMakeLists.txt  class.cpp  class.h  functions.h  laba1  laba1.1  laba1.2  laba1.3  laba1.4_task_A  laba1.4_task_B  laba1.5  laba2_with_functions  main.cpp  stack  stack_on_array.h  tests.cpp
laba1.6/: class.cpp  class.h
laba5/: CMakeLists.txt  SOME_IMPORTANT_INFORMATION.txt  main.cpp
laba7/: class.cpp  class.h  main.cpp
laba8/: functions.cpp  stack_on_array.h  stck_on_array.h
tests/: functions.cpp  functions.h  main.cpp  tests.cpp  tests.h
